<resources>
    <string name="app_name">Agapay</string>
    <string name="about">ABOUT</string>
    <string name="Philippines">The PHILIPPINES are an island group of over 7,500 islands;
        the main islands are Luzon, Mindanao, Mindoro, Leyte, Samar, Negros and Panay.
        Most of the Philippine islands are of volcanic origin. The archipelago is
        situated within the Southeast Asian part of the Pacific Ring of Fire, an area
        of intense volcanic and seismic activities. Along the eastern side of the islands
        runs the Philippine Trench, a submarine trench in the floor of the Philippine Sea. The Galathea
        Depth within the underwater canyon is one of the deepest depths of the ocean at
        10,540m (34,580 feet)</string>
    <string name="MSA">Map of Philippines, Maritime Southeast Asia.</string>
    <string name="politics">POLITICS (from greek POLITIKA, \'affairs of the cities\')
        is the set of activities that are associated with making decisions in groups, or
        other forms of power relations, between individuals, such as the distribution
        of resources or status.</string>
    <string name="politics1">The Philippines is a republic with a presidential
        form of government wherein power is equally divided among its three
        branches: executive, legislative, and judicial. The government seeks
        to act in the best interests of its citizens through this system of
        check and balance.</string>
    <string name="gov">- The Philippines is a republic with a presidential form of
        government wherein power is equally divided among its three branches:
        executive, legislative, and judicial. The government seeks to act in the
        best interests of its citizens through this system of check and balance.
    </string>
    <string name="gov1">- One basic corollary in a presidential system of
        government is the principle of separation of powers wherein legislation
        belongs to Congress, execution to the Executive, and settlement of legal
        controversies to the Judiciary.</string>
    <string name="legislative">- is authorized to make laws, alter, and repeal them
        through the power vested in the Philippine Congress. This institution is
        divided into the Senate and the House of Representatives.</string>
    <string name="legislative1">- The Legislative Branch enacts legislation, confirms
        or rejects Presidential appointments, and has the authority to declare
        war. This branch includes Congress (the Senate and House of Representatives)
        and several agencies that provide support services to Congress.</string>
    <string name="legislative2">- The Senate is composed of 24 Senators who are elected
        at large by the qualified voters of the Philippines.</string>
    <string name="legislative3">- The House of Representatives is composed of about 250
        members elected from legislative districts in the provinces, cities, and
        municipalities, and representatives elected through a party-list system
        of registered national, regional, and sectoral parties or organizations.
    </string>
    <string name="legislative4">- The party-list representatives shall constitute twenty
        per cent of the total number of representatives including those under the party
        list. For three consecutive terms after the ratification of this Constitution,
        one-half of the seats allocated to party-list representatives shall be filled,
        as provided by law, by selection or election from the labor, peasant, urban
        poor, indigenous cultural communities, women, youth, and such other sectors
        as may be provided by law, except the religious sector.</string>
    <string name="executive">- The Executive branch is composed of the President and the
        Vice President who are elected by direct popular vote and serve a term of
        six years. The Constitution grants the President authority to appoint his
        Cabinet. These departments form a large portion of the country’s
        bureaucracy.</string>
    <string name="executive1">- The executive branch carries out and enforces
        laws. It includes the President, Vice President, the Cabinet, executive
        departments, independent agencies, boards, commissions, and committees.
    </string>
    <string name="executive2">- The President leads the country. He or she is the
        head of state, leader of the national government, and Commander-in-Chief
        of all armed forces of the Philippines. The President serves a six-year
        term and cannot be re-elected.</string>
    <string name="executive3">- The Vice President supports the President. If
        the President is unable to serve, the Vice President becomes President.
        He or she also serves a six-year term.</string>
    <string name="executive4">- Cabinet members serve as advisors to the President.
        They include the Vice President and the heads of executive departments.
        Cabinet members are nominated by the President and must be confirmed by
        the Commission of Appointments.</string>
    <string name="judiciary">- The Judicial branch holds the power to settle
        controversies involving rights that are legally demandable and enforceable.
        This branch determines whether or not there has been a grave abuse of
        discretion amounting to lack or excess of jurisdiction on the part and
        instrumentality of the government. It is made up of a Supreme Court and
        lower courts.</string>
    <string name="judiciary1">- The judicial branch interprets the meaning of laws,
        applies laws to individual cases, and decides if laws violate the
        Constitution. The judicial power shall be vested in one Supreme Court
        and in such lower courts as may be established by law.</string>
    <string name="extra">- The Constitution expressly grants the Supreme Court
        the power of Judicial Review as the power to declare a treaty,
        international or executive agreement, law, presidential decree,
        proclamation, order, instruction, ordinance or regulation unconstitutional.
    </string>
    <string name="sociology">- Sociology is the study of human social relationships and
        institutions. Sociology’s subject matter is diverse, ranging from crime to
        religion, from the family to the state, from the divisions of race and
        social class to the shared beliefs of a common culture, and from social
        stability to radical change in whole societies. Unifying the study of
        these diverse subjects of study is sociology’s purpose of understanding
        how human action and consciousness both shape and are shaped by surrounding
        cultural and social structures.</string>
    <string name="matter">- Sociologists investigate the structure of groups,
        organizations, and societies, and how people interact within these contexts.
    </string>
    <string name="matter1">- All human behavior is social so the subject matter of
        sociology ranges from the intimate family to the hostile mob; from organized
        crime to religious cults; from the divisions of race, gender and social class to
        the shared beliefs of a common culture; and from the sociology of work to the
        sociology of sports.</string>
    <string name="roles">- We all play certain roles in our society- Social Scientists
        refer to this as status.</string>
    <string name="roles1">- STATUS, is the term used to describe our position within
        an institution.</string>
    <string name="hierarchy">- HIERARCHY, is the ranking system used in any particular
        environment based on authority or power.</string>
    <string name="hierarchy1">- Each position or role requires a certain type of expertise
        which is valued by society.</string>
    <string name="hierarchy2">- In order to distinguish between these rolees people
        are expected to dress and act in a certain way.</string>
    <string name="hierarchy3">- On any given day we can play many different roles in society.</string>
    <string name="values">- VALUES, Society carries with it a system of values. A
        particular set of values are assigned to each role. The practitioners of these
        roles are expected to accept and internalize these values.</string>
    <string name="norms">- NORMS, These are rules set out for a particular role
        that are considered standard behaviour (eg. Catholic Priests are expected
        to be celibate).</string>
    <string name="rules">- RULES, These are developed by cultures based on their system
        of values.</string>
    <string name="deviance">- DEVIANCE, Any behaviour that is different from the
        societal norm. It is deviant because we, as a society, do not accept it. Deviance
        can range from simple eccentricities to behaviour that harms society or is
        considered disreputable.</string>
    <string name="rehabilitation">- Sociology has formed a strong link with the justice system.
    </string>
    <string name="rehabilitation1">- A fundamental component of modern imprisonment is
        rehabilitation, or trying to re-educate and resocialize inmates so that they can grow
        to accept society\'s values and norms.</string>
    <string name="neo">- Based on ideas originally proposed by Karl Marx (1818-1883).</string>
    <string name="neo1">- Marx believed that economic power led to political
        power. This is the key to understanding societies.</string>
    <string name="neo2">- The struggle for economic power means that society is not
        static but ever-changing - social change is the result of a change made to the
        economic system.</string>
    <string name="neo3">- Neo-Marxists believe the economic system creates a rich class
        of owners and a poor class of workers.</string>
    <string name="feminist">- Feminist Theory, focus on sex and gender issues,
        believing that women have traditionally been disadvantaged in societty because
        men have discriminated against them.</string>
    <string name="feminist1">- They believe that men ,have made the decisions in society
        and that they tend to favour men.</string>
    <string name="feminist2">- LIBERAL FEMINISM, Liberal (or BOURGEOIS) Feminism, in
        which the claim of women for equal rights is seen in the context of a general
        opposition to various forms of oppression and discrimination, independently of
        other political convictions. Liberal feminism tends to emphasise social policy to
        open up professional, better-paid and pretigious jobs to women and the elimination
        of laws discriminating against the political, property and social right of women
        (encyclopedia of Mrxism).</string>
    <string name="marxian">- They believe that women\'s unpaid and undervalued
        domestic work has made it possible for undustrial owners to pay lower wages
        to male workers.</string>
    <string name="marxian1">- They also believe that the continuation of lower paid
        jobs has enabled the dominant class (the capitalists) to retains their control.</string>
    <string name="radical">- They believe that their natural child bearing role has
        to a systematic oppression by men.</string>
    <string name="radical1">- They believe they live in patriarchal society in which men
        dominate most of the institutions and are so entrenched that women cannot
        break in to these fields.</string>
    <string name="socialist">- SOCIALIST FEMINISM, try to separate issues of oppression
        that are the result of patriarchy which is a result of capitalism.</string>
</resources>