<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Politics"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_text2"
            android:text="Politics!"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="#fa8d0d"/>

        <com.github.chrisbanes.photoview.PhotoView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:id="@+id/politics"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/politics"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:textColor="#064474"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/politics1"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:textColor="#064474"/>

        <com.github.chrisbanes.photoview.PhotoView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:id="@+id/politics1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_text2"
            android:text="About The Government!"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="#fa8d0d"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gov"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:textColor="#064474"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gov1"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:textColor="#064474"/>

        <!--codes for legislative-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_text2"
            android:text="LEGISLATIVE BRANCH!"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="#fa8d0d"/>

        <com.github.chrisbanes.photoview.PhotoView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:id="@+id/legislative"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/legislative"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:textColor="#064474"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/legislative1"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:textColor="#064474"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/legislative2"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:textColor="#064474"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/legislative3"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:textColor="#064474"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/legislative4"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:textColor="#064474"/>

        <!--codes for legislative-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_text2"
            android:text="EXECUTIVE BRANCH!"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="#fa8d0d"/>

        <com.github.chrisbanes.photoview.PhotoView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:id="@+id/executive"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/executive"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:textColor="#064474"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/executive1"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:textColor="#064474"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/executive2"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:textColor="#064474"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/executive3"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:textColor="#064474"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/executive4"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:textColor="#064474"/>

        <!--codes for executivejudiciary-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_text2"
            android:text="JUDICIARY BRANCH!"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="#fa8d0d"/>

        <com.github.chrisbanes.photoview.PhotoView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:id="@+id/judiciary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judiciary"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:textColor="#064474"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judiciary1"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:textColor="#064474"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Each branch of government can change acts of the other branches as follows:"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:textColor="#064474"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="- The President can veto laws passed by Congress."
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:textColor="#064474"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="- Congress confirms or rejects the President's
               appointments and can remove the President from office in
               exceptional circumstances."
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:textColor="#064474"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="- The Justices of the Supreme Court,
                who can overturn unconstitutional laws, are appointed by the President. "
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:textColor="#064474"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/extra"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:textColor="#064474"/>

        <Button
            android:layout_width="98dp"
            android:layout_height="37dp"
            android:layout_gravity="right"
            android:text="Back"
            android:layout_marginTop="20dp"
            android:fontFamily="monospace"
            android:textColor="#064474"
            android:background="@drawable/custom_loginbutton"
            android:onClick="btn_back"/>






    </LinearLayout>

</ScrollView>